chapter-3/basic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  labels:
    app: recommendation
spec:
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: recommendation
